[package]
name = "plug2proxy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "plug2proxy"
path = "src/bin/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints.clippy]
collapsible_else_if = "allow"
disallowed_macros = "warn"
too_many_arguments = "allow"

[dependencies]
anyhow = { version = "1.0.88", features = ["backtrace"] }
async-imap = { version = "0.10.1", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
async-trait = "0.1.83"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
color-backtrace = "0.6.1"
colored = "2.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.11.5"
futures = "0.3.30"
hickory-client = "0.24.1"
hickory-resolver = { version = "0.24.1", features = ["dns-over-native-tls"] }
hickory-server = { version = "0.24.1", features = ["hickory-resolver"] }
imap = "2.4.1"
ipnet = "2.10.0"
itertools = "0.13.0"
json_comments = "0.2.2"
lettre = "0.11.9"
log = "0.4.22"
maxminddb = "0.24.0"
native-tls = "0.2.12"
quinn = "0.11.5"
rand = "0.8.5"
rcgen = "0.13.1"
redis = { version = "0.27.2", features = ["connection-manager", "tokio-comp", "tokio-rustls-comp"] }
regex = "1.11.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.13", features = ["ring"] }
rustls-native-certs = "0.8.0"
serde = "1.0.210"
serde_json = "1.0.128"
socket2 = "0.5.7"
stun = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde"] }
webrtc = "0.11.0"
webrtc-util = "0.9.0"
