[package]
name = "plug2proxy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints.clippy]
collapsible_else_if = "allow"
disallowed_macros = "warn"
too_many_arguments = "allow"
type_complexity = "allow"

[dependencies]
aes-gcm = "0.10.3"
anyhow = { version = "1.0.88", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.83"
bytes = "1.7.2"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
color-backtrace = "0.6.1"
colored = "2.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.11.5"
futures = "0.3.30"
futures-util = "0.3.31"
h2 = { version = "0.4.12", features = ["stream"] }
hickory-client = "0.24.1"
hickory-resolver = { version = "0.24.1", features = ["dns-over-native-tls"] }
hickory-server = { version = "0.24.1", features = ["hickory-resolver"] }
http = "1.1.0"
humantime = "2.1.0"
ipnet = "2.10.0"
itertools = "0.13.0"
json_comments = "0.2.2"
libc = "0.2.159"
lits = "0.3.1"
log = "0.4.22"
lru = "0.12.5"
maxminddb = "0.24.0"
nix = { version = "0.29.0", features = ["net"] }
openssl = { version = "*", features = ["vendored"] }
quinn = "0.11.5"
rand = "0.8.5"
rcgen = "0.13.1"
redis = { version = "0.29.2", features = [
    "connection-manager",
    "tokio-comp",
    "tokio-rustls-comp",
] }
regex = "1.11.0"
reqwest = "0.12.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.14", features = ["ring"] }
serde = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
socket2 = "0.5.7"
stun = "0.6.0"
tls-parser = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-rustls = "0.26.0"
tokio-socks = "0.5.2"
tokio-util = { version = "0.7.12", features = ["compat"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

# [patch.crates-io]
# h2 = { "git" = "https://github.com/vilicvane/h2.git", "rev" = "a49ba5b" }
